--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,18 @@ body{
   text-align: center;
 }
 
+.social-media {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: baseline;
+  padding: 30px 25%;
+  gap: 10px;
+}
+
+.contact-icon{
+  margin-left: auto;
+}
+
 .projects,
 .skills{
   display: inline;
@@ -35,6 +47,3 @@ body{
   color: rgb(205, 205, 205);
 }
 
-* {
-  outline: 2px solid red;
-}
